--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/HomeViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/HomeViewController.xib
@@ -1,22 +1,151 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="StashManagerApple" customModuleProvider="target">
             <connections>
+                <outlet property="categoriesCollectionView" destination="HnB-8F-EIN" id="SLX-1L-2lF"/>
+                <outlet property="roomsCollectionView" destination="e5J-U0-iMz" id="Nyb-o2-axW"/>
+                <outlet property="searchTextField" destination="184-XN-A5z" id="QQH-rx-Sbe"/>
+                <outlet property="searchView" destination="A09-bk-mSO" id="PuU-RM-GeH"/>
+                <outlet property="searcherImageView" destination="2u1-b1-5EL" id="A6f-2y-6u8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v0O-Gb-Rzw">
+                    <rect key="frame" x="0.0" y="59" width="393" height="2"/>
+                    <color key="backgroundColor" name="SkyBlue"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="2" id="Bsu-1m-rN4"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A09-bk-mSO">
+                    <rect key="frame" x="16" y="77" width="361" height="32"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="W1V-r0-ypq">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lec-CQ-O3p">
+                                    <rect key="frame" x="0.0" y="0.0" width="12" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="12" id="ZKe-wF-eTd"/>
+                                    </constraints>
+                                </view>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Buscar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="184-XN-A5z">
+                                    <rect key="frame" x="16" y="0.0" width="297" height="32"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fy4-OF-EhL">
+                                    <rect key="frame" x="317" y="0.0" width="32" height="32"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="2u1-b1-5EL">
+                                            <rect key="frame" x="4" y="4.9999999999999964" width="24" height="22.333333333333339"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="24" id="4pQ-yg-61K"/>
+                                                <constraint firstAttribute="width" constant="24" id="Hge-md-QBh"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCn-dO-C4k">
+                                            <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain"/>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="OCn-dO-C4k" firstAttribute="top" secondItem="fy4-OF-EhL" secondAttribute="top" id="80J-Vd-p7G"/>
+                                        <constraint firstAttribute="width" constant="32" id="BbL-5B-sAn"/>
+                                        <constraint firstAttribute="height" constant="32" id="HZa-dj-ri4"/>
+                                        <constraint firstItem="OCn-dO-C4k" firstAttribute="leading" secondItem="fy4-OF-EhL" secondAttribute="leading" id="K4w-gA-Cvm"/>
+                                        <constraint firstAttribute="bottom" secondItem="OCn-dO-C4k" secondAttribute="bottom" id="L5P-Bn-OLB"/>
+                                        <constraint firstItem="2u1-b1-5EL" firstAttribute="centerX" secondItem="fy4-OF-EhL" secondAttribute="centerX" id="Tyz-fI-7Sc"/>
+                                        <constraint firstAttribute="trailing" secondItem="OCn-dO-C4k" secondAttribute="trailing" id="XVp-UM-dqf"/>
+                                        <constraint firstItem="2u1-b1-5EL" firstAttribute="centerY" secondItem="fy4-OF-EhL" secondAttribute="centerY" id="vDk-Sy-7J1"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sG1-Ge-x3h">
+                                    <rect key="frame" x="353" y="0.0" width="8" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="8" id="CcM-fn-BPl"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" name="SkyBlueFiftyPercent"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="W1V-r0-ypq" secondAttribute="bottom" id="NKh-70-ERR"/>
+                        <constraint firstAttribute="trailing" secondItem="W1V-r0-ypq" secondAttribute="trailing" id="fZ5-Ua-pYI"/>
+                        <constraint firstItem="W1V-r0-ypq" firstAttribute="leading" secondItem="A09-bk-mSO" secondAttribute="leading" id="kfz-aR-hDx"/>
+                        <constraint firstItem="W1V-r0-ypq" firstAttribute="top" secondItem="A09-bk-mSO" secondAttribute="top" id="rnf-YR-I4x"/>
+                    </constraints>
+                </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="HnB-8F-EIN">
+                    <rect key="frame" x="16" y="121" width="377" height="32"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="32" id="s6R-7m-Kbz"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="noG-Hb-OgS">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="e5J-U0-iMz">
+                    <rect key="frame" x="16" y="165" width="361" height="653"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OL7-Ep-rs0">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="e5J-U0-iMz" firstAttribute="top" secondItem="HnB-8F-EIN" secondAttribute="bottom" constant="12" id="9o7-O0-8zv"/>
+                <constraint firstItem="A09-bk-mSO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="APR-UV-RCd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HnB-8F-EIN" secondAttribute="trailing" id="EWT-eE-e9z"/>
+                <constraint firstItem="e5J-U0-iMz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Ffx-JX-TUA"/>
+                <constraint firstItem="v0O-Gb-Rzw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Iyp-7X-mQl"/>
+                <constraint firstItem="HnB-8F-EIN" firstAttribute="top" secondItem="A09-bk-mSO" secondAttribute="bottom" constant="12" id="MDv-VH-OC8"/>
+                <constraint firstItem="A09-bk-mSO" firstAttribute="top" secondItem="v0O-Gb-Rzw" secondAttribute="bottom" constant="16" id="ZWi-Wj-Sg4"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="e5J-U0-iMz" secondAttribute="trailing" constant="16" id="aEs-pz-0gI"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="e5J-U0-iMz" secondAttribute="bottom" id="d1I-eK-B2F"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="v0O-Gb-Rzw" secondAttribute="trailing" id="g0W-V0-sSU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="A09-bk-mSO" secondAttribute="trailing" constant="16" id="qda-Z0-UoG"/>
+                <constraint firstItem="v0O-Gb-Rzw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="vUF-Sb-oZL"/>
+                <constraint firstItem="HnB-8F-EIN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="zfh-kh-ulK"/>
+            </constraints>
+            <point key="canvasLocation" x="244" y="-3"/>
         </view>
     </objects>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <namedColor name="SkyBlue">
+            <color red="0.55686274509803924" green="0.792156862745098" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SkyBlueFiftyPercent">
+            <color red="0.55699998140335083" green="0.79199999570846558" blue="0.90200001001358032" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
