--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Cells/CategoriesCollectionViewCell.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Cells/CategoriesCollectionViewCell.xib
@@ -10,9 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoriesCollectionViewCell" id="gTV-IL-0wX" customClass="CategoriesCollectionViewCell" customModule="StashManagerApple" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="CategoriesCollectionViewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="CategoriesCollectionViewCell" customModule="StashManagerApple" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
-            <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -20,16 +19,16 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Qy-nq-8VO">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zZ-vE-AhR">
-                                <rect key="frame" x="29" y="1.6666666666666661" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zZ-vE-AhR">
+                                <rect key="frame" x="29.333333333333332" y="2" width="41.333333333333343" height="20.333333333333332"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" name="PrussianBlue"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="5zZ-vE-AhR" firstAttribute="centerX" secondItem="5Qy-nq-8VO" secondAttribute="centerX" id="eQn-Ci-sBK"/>
-                            <constraint firstItem="5zZ-vE-AhR" firstAttribute="centerY" secondItem="5Qy-nq-8VO" secondAttribute="centerY" id="yud-z9-5Go"/>
+                            <constraint firstItem="5zZ-vE-AhR" firstAttribute="centerX" secondItem="5Qy-nq-8VO" secondAttribute="centerX" id="jj8-em-pSL"/>
+                            <constraint firstItem="5zZ-vE-AhR" firstAttribute="centerY" secondItem="5Qy-nq-8VO" secondAttribute="centerY" id="nBW-9F-s37"/>
                         </constraints>
                     </view>
                 </subviews>
