--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Cells/RoomsCollectionViewCell.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Cells/RoomsCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,14 +11,69 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoomsCollectionViewCell" id="gTV-IL-0wX" customClass="RoomsCollectionViewCell" customModule="StashManagerApple" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="328" height="112"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="328" height="112"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chB-Xm-PKt">
+                        <rect key="frame" x="0.0" y="0.0" width="328" height="112"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7ve-8m-aNp">
+                                <rect key="frame" x="0.0" y="0.0" width="328" height="112"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0sY-vy-aRj">
+                                        <rect key="frame" x="0.0" y="0.0" width="328" height="90"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="S53-7m-uBr">
+                                        <rect key="frame" x="0.0" y="90" width="328" height="22"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L07-Sf-EaU">
+                                                <rect key="frame" x="0.0" y="0.0" width="16" height="22"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="16" id="Ruj-P4-Yoe"/>
+                                                    <constraint firstAttribute="height" constant="22" id="qSp-DU-rBz"/>
+                                                </constraints>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GUt-6o-I2H">
+                                                <rect key="frame" x="16" y="1" width="312" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" name="SkyBlue"/>
+                        <constraints>
+                            <constraint firstItem="7ve-8m-aNp" firstAttribute="leading" secondItem="chB-Xm-PKt" secondAttribute="leading" id="E7m-of-jem"/>
+                            <constraint firstAttribute="trailing" secondItem="7ve-8m-aNp" secondAttribute="trailing" id="GGS-Ez-HWe"/>
+                            <constraint firstItem="7ve-8m-aNp" firstAttribute="top" secondItem="chB-Xm-PKt" secondAttribute="top" id="chL-DX-hvu"/>
+                            <constraint firstAttribute="bottom" secondItem="7ve-8m-aNp" secondAttribute="bottom" id="dKQ-pF-KFN"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="chB-Xm-PKt" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="FWa-f7-IWc"/>
+                <constraint firstAttribute="trailing" secondItem="chB-Xm-PKt" secondAttribute="trailing" id="OjR-8w-jIK"/>
+                <constraint firstAttribute="bottom" secondItem="chB-Xm-PKt" secondAttribute="bottom" id="UaX-2U-dRc"/>
+                <constraint firstItem="chB-Xm-PKt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="aUD-9G-uMW"/>
+            </constraints>
+            <connections>
+                <outlet property="roomImageView" destination="0sY-vy-aRj" id="ziA-fB-M8K"/>
+                <outlet property="roomNameLabel" destination="GUt-6o-I2H" id="HHs-pf-fz7"/>
+            </connections>
             <point key="canvasLocation" x="67" y="-11"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="SkyBlue">
+            <color red="0.55686274509803924" green="0.792156862745098" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
