add new dessign of login and stash view

--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Cells/RoomsCollectionViewCell.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Cells/RoomsCollectionViewCell.xib
@@ -23,7 +23,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7ve-8m-aNp">
                                 <rect key="frame" x="0.0" y="0.0" width="328" height="112"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0sY-vy-aRj">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0sY-vy-aRj">
                                         <rect key="frame" x="0.0" y="0.0" width="328" height="90"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="S53-7m-uBr">
