--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/StashesViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/StashesViewController.xib
@@ -1,22 +1,151 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StashesViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StashesViewController" customModule="StashManagerApple" customModuleProvider="target">
             <connections>
+                <outlet property="searchTextField" destination="BF1-i1-WmZ" id="3sC-O0-gi7"/>
+                <outlet property="searchView" destination="LcG-NP-j06" id="bIP-II-IcR"/>
+                <outlet property="searcherImageView" destination="uIa-zy-VNd" id="Cy8-NF-dQR"/>
+                <outlet property="stashesCollectionView" destination="exd-cS-OZT" id="YmE-VF-OPd"/>
+                <outlet property="typeStashOrRoomCollectionView" destination="bQM-FC-Rcy" id="dJN-PT-XH2"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcG-NP-j06">
+                    <rect key="frame" x="16" y="77" width="361" height="32"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="EU9-D1-exm">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wec-XN-jlt">
+                                    <rect key="frame" x="0.0" y="0.0" width="12" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="12" id="hbG-7w-hkc"/>
+                                    </constraints>
+                                </view>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Buscar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BF1-i1-WmZ">
+                                    <rect key="frame" x="16" y="0.0" width="297" height="32"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNR-7h-Z1k">
+                                    <rect key="frame" x="317" y="0.0" width="32" height="32"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uIa-zy-VNd">
+                                            <rect key="frame" x="4" y="4.9999999999999964" width="24" height="22.333333333333336"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="24" id="D3C-oV-wQt"/>
+                                                <constraint firstAttribute="width" constant="24" id="d2E-VL-Tca"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NlM-sj-U22">
+                                            <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain"/>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="uIa-zy-VNd" firstAttribute="centerX" secondItem="LNR-7h-Z1k" secondAttribute="centerX" id="4eA-uE-zcF"/>
+                                        <constraint firstItem="uIa-zy-VNd" firstAttribute="centerY" secondItem="LNR-7h-Z1k" secondAttribute="centerY" id="7MQ-Vd-XbQ"/>
+                                        <constraint firstAttribute="width" constant="32" id="7aJ-U0-9CQ"/>
+                                        <constraint firstItem="NlM-sj-U22" firstAttribute="leading" secondItem="LNR-7h-Z1k" secondAttribute="leading" id="H1D-QL-0Gz"/>
+                                        <constraint firstItem="NlM-sj-U22" firstAttribute="top" secondItem="LNR-7h-Z1k" secondAttribute="top" id="KZh-B8-DWT"/>
+                                        <constraint firstAttribute="height" constant="32" id="eW1-oZ-YQo"/>
+                                        <constraint firstAttribute="trailing" secondItem="NlM-sj-U22" secondAttribute="trailing" id="fkQ-Wx-JpI"/>
+                                        <constraint firstAttribute="bottom" secondItem="NlM-sj-U22" secondAttribute="bottom" id="zjU-iB-6yu"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qlO-uy-YP2">
+                                    <rect key="frame" x="353" y="0.0" width="8" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="8" id="aRX-CL-lHe"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" name="SkyBlueFiftyPercent"/>
+                    <constraints>
+                        <constraint firstItem="EU9-D1-exm" firstAttribute="leading" secondItem="LcG-NP-j06" secondAttribute="leading" id="EDX-rr-66x"/>
+                        <constraint firstItem="EU9-D1-exm" firstAttribute="top" secondItem="LcG-NP-j06" secondAttribute="top" id="i2E-lI-d0a"/>
+                        <constraint firstAttribute="bottom" secondItem="EU9-D1-exm" secondAttribute="bottom" id="uCx-U8-4CE"/>
+                        <constraint firstAttribute="trailing" secondItem="EU9-D1-exm" secondAttribute="trailing" id="wuJ-uS-AWT"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2z-5Z-HLQ">
+                    <rect key="frame" x="0.0" y="59" width="393" height="2"/>
+                    <color key="backgroundColor" name="SkyBlue"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="2" id="xkg-VX-w1Z"/>
+                    </constraints>
+                </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bQM-FC-Rcy">
+                    <rect key="frame" x="16" y="121" width="377" height="36"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="UaP-tr-fp9"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UQr-fb-hap">
+                        <size key="itemSize" width="128" height="32"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="exd-cS-OZT">
+                    <rect key="frame" x="16" y="169" width="361" height="649"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="12" minimumInteritemSpacing="12" id="26A-0m-U1F">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="a2z-5Z-HLQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="7sj-7F-gbS"/>
+                <constraint firstAttribute="trailing" secondItem="a2z-5Z-HLQ" secondAttribute="trailing" id="Cgt-bS-TzP"/>
+                <constraint firstItem="exd-cS-OZT" firstAttribute="top" secondItem="bQM-FC-Rcy" secondAttribute="bottom" constant="12" id="FDg-un-Q54"/>
+                <constraint firstItem="bQM-FC-Rcy" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Gkn-Wz-VR1"/>
+                <constraint firstItem="bQM-FC-Rcy" firstAttribute="top" secondItem="LcG-NP-j06" secondAttribute="bottom" constant="12" id="Hv6-62-Nkz"/>
+                <constraint firstItem="exd-cS-OZT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Je9-u4-TeP"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LcG-NP-j06" secondAttribute="trailing" constant="16" id="eUp-fW-d2T"/>
+                <constraint firstItem="LcG-NP-j06" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="hF1-sq-haa"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="exd-cS-OZT" secondAttribute="trailing" constant="16" id="nX8-Yb-nF7"/>
+                <constraint firstItem="bQM-FC-Rcy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="nhF-3E-FRF"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="exd-cS-OZT" secondAttribute="bottom" id="t2C-WC-Ujt"/>
+                <constraint firstItem="LcG-NP-j06" firstAttribute="top" secondItem="a2z-5Z-HLQ" secondAttribute="bottom" constant="16" id="v1U-lt-U7J"/>
+                <constraint firstItem="a2z-5Z-HLQ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wgg-Q9-OEU"/>
+            </constraints>
+            <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
         </view>
     </objects>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <namedColor name="SkyBlue">
+            <color red="0.55686274509803924" green="0.792156862745098" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SkyBlueFiftyPercent">
+            <color red="0.55699998140335083" green="0.79199999570846558" blue="0.90200001001358032" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
