Add all principal screens

--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Login/LoginViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Login/LoginViewController.xib
@@ -67,7 +67,7 @@
                             <color key="textColor" name="PrussianBlue"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="leading" contentVerticalAlignment="bottom" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9XU-Z1-C7q">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="leading" contentVerticalAlignment="bottom" text="dev@stashmanager.es" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9XU-Z1-C7q">
                             <rect key="frame" x="0.0" y="20.333333333333314" width="361" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="32" id="hIZ-mp-As7"/>
@@ -103,7 +103,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="itc-Xw-GbP">
                             <rect key="frame" x="0.0" y="20.333333333333314" width="361" height="32"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="leading" contentVerticalAlignment="bottom" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUr-ue-57q">
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="leading" contentVerticalAlignment="bottom" text="Dev123456!" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUr-ue-57q">
                                     <rect key="frame" x="0.0" y="0.0" width="329" height="32"/>
                                     <color key="textColor" red="0.0078431372550000003" green="0.18823529410000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
