--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
@@ -1,22 +1,173 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArticlesViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArticlesViewController" customModule="StashManagerApple" customModuleProvider="target">
             <connections>
+                <outlet property="allArticlesTitleView" destination="bPn-YJ-tgC" id="8II-Ox-5bz"/>
+                <outlet property="allArticlesTittleLabel" destination="LyP-QJ-S8b" id="Nu6-oS-yAt"/>
+                <outlet property="articlesCollectionView" destination="76L-GO-71e" id="Jos-UJ-4BY"/>
+                <outlet property="collectionSegmentControl" destination="yOY-yp-nqP" id="jMb-y3-wi1"/>
+                <outlet property="searchTextField" destination="rpe-xU-w8s" id="9xb-jG-Bdy"/>
+                <outlet property="searchView" destination="SSg-ZX-uHH" id="mFn-ff-6rb"/>
+                <outlet property="searcherImageView" destination="f2W-1r-Dtf" id="3Nb-Mk-c1U"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yBs-aP-Dlw">
+                    <rect key="frame" x="0.0" y="59" width="393" height="1"/>
+                    <color key="backgroundColor" name="SkyBlue"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="2lo-hA-7hB"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SSg-ZX-uHH">
+                    <rect key="frame" x="16" y="76" width="361" height="32"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="mHg-e4-UM3">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x3o-xS-KsD">
+                                    <rect key="frame" x="0.0" y="0.0" width="12" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="12" id="Wap-6j-pVg"/>
+                                    </constraints>
+                                </view>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Buscar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rpe-xU-w8s">
+                                    <rect key="frame" x="16" y="0.0" width="297" height="32"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hrF-p6-u18">
+                                    <rect key="frame" x="317" y="0.0" width="32" height="32"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="f2W-1r-Dtf">
+                                            <rect key="frame" x="4" y="4.9999999999999964" width="24" height="22.333333333333336"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="24" id="Jhm-0P-NkE"/>
+                                                <constraint firstAttribute="width" constant="24" id="Whs-7i-zPG"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hm2-15-jk2">
+                                            <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain"/>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="32" id="Hbo-Z1-xa2"/>
+                                        <constraint firstItem="Hm2-15-jk2" firstAttribute="leading" secondItem="hrF-p6-u18" secondAttribute="leading" id="RhL-WK-RMM"/>
+                                        <constraint firstItem="Hm2-15-jk2" firstAttribute="top" secondItem="hrF-p6-u18" secondAttribute="top" id="Ssy-Xo-csf"/>
+                                        <constraint firstItem="f2W-1r-Dtf" firstAttribute="centerY" secondItem="hrF-p6-u18" secondAttribute="centerY" id="Z8K-FS-Mxb"/>
+                                        <constraint firstAttribute="bottom" secondItem="Hm2-15-jk2" secondAttribute="bottom" id="cg2-en-UNx"/>
+                                        <constraint firstAttribute="trailing" secondItem="Hm2-15-jk2" secondAttribute="trailing" id="cjG-jj-Nez"/>
+                                        <constraint firstAttribute="height" constant="32" id="tQA-9c-xKN"/>
+                                        <constraint firstItem="f2W-1r-Dtf" firstAttribute="centerX" secondItem="hrF-p6-u18" secondAttribute="centerX" id="xbh-Zz-NmU"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zx6-0S-Jql">
+                                    <rect key="frame" x="353" y="0.0" width="8" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="8" id="Qbi-xL-prD"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" name="SkyBlueFiftyPercent"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="mHg-e4-UM3" secondAttribute="trailing" id="Df4-UL-Ngv"/>
+                        <constraint firstItem="mHg-e4-UM3" firstAttribute="top" secondItem="SSg-ZX-uHH" secondAttribute="top" id="fK1-Jk-Te3"/>
+                        <constraint firstAttribute="bottom" secondItem="mHg-e4-UM3" secondAttribute="bottom" id="jeN-92-FSK"/>
+                        <constraint firstItem="mHg-e4-UM3" firstAttribute="leading" secondItem="SSg-ZX-uHH" secondAttribute="leading" id="nV7-vX-gHr"/>
+                    </constraints>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jbv-xY-QSe">
+                    <rect key="frame" x="16" y="124" width="361" height="0.0"/>
+                    <subviews>
+                        <segmentedControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yOY-yp-nqP">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="1"/>
+                            <segments>
+                                <segment title="First"/>
+                                <segment title="Todos"/>
+                            </segments>
+                        </segmentedControl>
+                        <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bPn-YJ-tgC">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="1"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todos los articulos:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyP-QJ-S8b">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="opG-OB-ODG">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="1"/>
+                                    <color key="backgroundColor" name="SelectiveYellow"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="4G2-6D-NCJ"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="76L-GO-71e">
+                    <rect key="frame" x="16" y="140" width="361" height="678"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ifk-13-xyt">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="76L-GO-71e" firstAttribute="top" secondItem="Jbv-xY-QSe" secondAttribute="bottom" constant="16" id="4w0-cV-o8N"/>
+                <constraint firstItem="Jbv-xY-QSe" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="6f3-6I-aVa"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Jbv-xY-QSe" secondAttribute="trailing" constant="16" id="7pd-IB-RKz"/>
+                <constraint firstItem="SSg-ZX-uHH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Afk-35-iRK"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SSg-ZX-uHH" secondAttribute="trailing" constant="16" id="KsU-S3-c4e"/>
+                <constraint firstItem="76L-GO-71e" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="NPL-BQ-mNv"/>
+                <constraint firstItem="SSg-ZX-uHH" firstAttribute="top" secondItem="yBs-aP-Dlw" secondAttribute="bottom" constant="16" id="SGU-EF-bMT"/>
+                <constraint firstItem="yBs-aP-Dlw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ZGA-qH-HXU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="76L-GO-71e" secondAttribute="trailing" constant="16" id="hfK-CV-STx"/>
+                <constraint firstItem="Jbv-xY-QSe" firstAttribute="top" secondItem="SSg-ZX-uHH" secondAttribute="bottom" constant="16" id="j1s-Sc-2pm"/>
+                <constraint firstAttribute="trailing" secondItem="yBs-aP-Dlw" secondAttribute="trailing" id="lJb-mY-t9u"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="76L-GO-71e" secondAttribute="bottom" id="rFS-9Z-iXY"/>
+                <constraint firstItem="yBs-aP-Dlw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="w9F-T4-kv7"/>
+            </constraints>
+            <point key="canvasLocation" x="79" y="-11"/>
         </view>
     </objects>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <namedColor name="SelectiveYellow">
+            <color red="1" green="0.71764705882352942" blue="0.011764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SkyBlue">
+            <color red="0.55686274509803924" green="0.792156862745098" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SkyBlueFiftyPercent">
+            <color red="0.55699998140335083" green="0.79199999570846558" blue="0.90200001001358032" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
