--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Profile/ProfileViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Profile/ProfileViewController.xib
@@ -1,22 +1,188 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController" customModule="StashManagerApple" customModuleProvider="target">
             <connections>
+                <outlet property="logoutButton" destination="VIq-6Z-twh" id="em4-9Z-JcY"/>
+                <outlet property="logoutLabel" destination="2bP-U7-a7C" id="q4h-jq-vzu"/>
+                <outlet property="logoutView" destination="mBv-jB-VoQ" id="Utc-kY-qYV"/>
+                <outlet property="profileEmailLabel" destination="Kbx-8P-G3L" id="Whc-9n-ds1"/>
+                <outlet property="profileImageView" destination="G8s-Rr-Rzy" id="i2W-YS-Wv6"/>
+                <outlet property="profileLastNameLabel" destination="1Jg-GK-861" id="eOs-Ap-UEV"/>
+                <outlet property="profileNameLabel" destination="Qss-Ib-Xms" id="MOz-RE-cec"/>
+                <outlet property="profileTitleEmailLabel" destination="xlg-zZ-lT0" id="z5D-O2-0tI"/>
+                <outlet property="removeAccountButton" destination="pIq-Hb-Ftm" id="mFd-vT-0GF"/>
+                <outlet property="removeAccountLabel" destination="sRI-19-MoA" id="KWx-pY-dcM"/>
+                <outlet property="removeAccountView" destination="1hU-Dz-gbL" id="u6D-Em-vKc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IiJ-HY-te8">
+                    <rect key="frame" x="0.0" y="59" width="393" height="1"/>
+                    <color key="backgroundColor" name="SkyBlue"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="Ad6-ce-rSu"/>
+                    </constraints>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Atg-sA-tEt">
+                    <rect key="frame" x="16" y="76" width="361" height="150"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G8s-Rr-Rzy">
+                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="150" id="ECf-bf-z4C"/>
+                                <constraint firstAttribute="width" constant="150" id="h1y-Rp-cEb"/>
+                            </constraints>
+                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TN3-ps-5qI">
+                            <rect key="frame" x="166" y="0.0" width="195" height="150"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gH1-N6-7PA">
+                                    <rect key="frame" x="0.0" y="0.0" width="195" height="37.666666666666664"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qss-Ib-Xms">
+                                    <rect key="frame" x="0.0" y="37.666666666666671" width="195" height="37.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Jg-GK-861">
+                                    <rect key="frame" x="0.0" y="75" width="195" height="37.666666666666657"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CLB-GD-MeF">
+                                    <rect key="frame" x="0.0" y="112.66666666666664" width="195" height="37.333333333333329"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XEF-dP-qsy">
+                    <rect key="frame" x="16" y="268" width="361" height="108"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xlg-zZ-lT0">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="50"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbx-8P-G3L">
+                            <rect key="frame" x="0.0" y="58" width="361" height="50"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="B8V-sg-X43">
+                    <rect key="frame" x="16" y="682" width="361" height="136"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1hU-Dz-gbL">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="36"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRI-19-MoA">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="36"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pIq-Hb-Ftm">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="36"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="sRI-19-MoA" firstAttribute="top" secondItem="1hU-Dz-gbL" secondAttribute="top" id="FkL-uL-3fg"/>
+                                <constraint firstAttribute="bottom" secondItem="sRI-19-MoA" secondAttribute="bottom" id="LU2-dI-gDe"/>
+                                <constraint firstAttribute="trailing" secondItem="pIq-Hb-Ftm" secondAttribute="trailing" id="Z0z-Ca-EWL"/>
+                                <constraint firstItem="pIq-Hb-Ftm" firstAttribute="top" secondItem="1hU-Dz-gbL" secondAttribute="top" id="jCb-Gm-uHy"/>
+                                <constraint firstAttribute="trailing" secondItem="sRI-19-MoA" secondAttribute="trailing" id="lu8-1q-hIJ"/>
+                                <constraint firstItem="sRI-19-MoA" firstAttribute="leading" secondItem="1hU-Dz-gbL" secondAttribute="leading" id="rUr-vI-97D"/>
+                                <constraint firstItem="pIq-Hb-Ftm" firstAttribute="leading" secondItem="1hU-Dz-gbL" secondAttribute="leading" id="sE4-nk-KVj"/>
+                                <constraint firstAttribute="height" constant="36" id="sF2-5O-C0h"/>
+                                <constraint firstAttribute="bottom" secondItem="pIq-Hb-Ftm" secondAttribute="bottom" id="twC-Bs-9LP"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mBv-jB-VoQ">
+                            <rect key="frame" x="0.0" y="60" width="361" height="36"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2bP-U7-a7C">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="36"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VIq-6Z-twh">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="36"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="36" id="po4-gG-JuF"/>
+                                    </constraints>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="36" id="6Ad-9B-cN7"/>
+                                <constraint firstItem="VIq-6Z-twh" firstAttribute="top" secondItem="mBv-jB-VoQ" secondAttribute="top" id="AUk-pn-iae"/>
+                                <constraint firstAttribute="trailing" secondItem="VIq-6Z-twh" secondAttribute="trailing" id="Nnc-0k-CnV"/>
+                                <constraint firstAttribute="bottom" secondItem="VIq-6Z-twh" secondAttribute="bottom" id="hzo-1H-cNq"/>
+                                <constraint firstItem="VIq-6Z-twh" firstAttribute="leading" secondItem="mBv-jB-VoQ" secondAttribute="leading" id="qzV-3F-fvV"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KCA-0v-rKi">
+                            <rect key="frame" x="0.0" y="120" width="361" height="16"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="16" id="j56-T9-6In"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="XEF-dP-qsy" secondAttribute="trailing" constant="16" id="Fgq-ab-dye"/>
+                <constraint firstItem="IiJ-HY-te8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="IKZ-k7-V84"/>
+                <constraint firstItem="XEF-dP-qsy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Km2-TT-zBW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="IiJ-HY-te8" secondAttribute="trailing" id="Pgy-Ot-nqw"/>
+                <constraint firstItem="Atg-sA-tEt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="SEh-3Q-f8E"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="B8V-sg-X43" secondAttribute="trailing" constant="16" id="diO-P3-1xo"/>
+                <constraint firstItem="B8V-sg-X43" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="eUo-Cf-iSr"/>
+                <constraint firstItem="XEF-dP-qsy" firstAttribute="top" secondItem="Atg-sA-tEt" secondAttribute="bottom" constant="42" id="qsK-dW-q4q"/>
+                <constraint firstItem="IiJ-HY-te8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="rKq-Bm-GNV"/>
+                <constraint firstAttribute="trailing" secondItem="Atg-sA-tEt" secondAttribute="trailing" constant="16" id="vGX-M9-jya"/>
+                <constraint firstItem="Atg-sA-tEt" firstAttribute="top" secondItem="IiJ-HY-te8" secondAttribute="bottom" constant="16" id="xX5-dx-fk4"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="B8V-sg-X43" secondAttribute="bottom" id="yaS-sG-s0b"/>
+            </constraints>
+            <point key="canvasLocation" x="248" y="-8"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="SkyBlue">
+            <color red="0.55686274509803924" green="0.792156862745098" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
