Add detail and edit at stashes and articles

--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
@@ -124,7 +124,7 @@
                         </stackView>
                     </subviews>
                 </stackView>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="76L-GO-71e">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="76L-GO-71e">
                     <rect key="frame" x="16" y="140" width="361" height="678"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ifk-13-xyt">
