--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/HomeViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/HomeViewController.xib
@@ -105,7 +105,7 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="e5J-U0-iMz">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="e5J-U0-iMz">
                     <rect key="frame" x="16" y="168" width="361" height="650"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="12" minimumInteritemSpacing="12" id="OL7-Ep-rs0">
