--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
@@ -103,6 +103,9 @@
                                 <segment title="First"/>
                                 <segment title="Todos"/>
                             </segments>
+                            <connections>
+                                <action selector="changeContainer:" destination="-1" eventType="valueChanged" id="WsQ-1x-zbs"/>
+                            </connections>
                         </segmentedControl>
                         <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bPn-YJ-tgC">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="1"/>
