--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Detail/StashDetailViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Detail/StashDetailViewController.xib
@@ -120,6 +120,9 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
+                                    <connections>
+                                        <action selector="goToArticlesInStash:" destination="-1" eventType="touchUpInside" id="5rJ-qb-8yV"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" red="0.0078431372550000003" green="0.18823529410000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
