--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Detail/StashDetailViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Detail/StashDetailViewController.xib
@@ -14,6 +14,8 @@
                 <outlet property="articlesStashButtonLabel" destination="Peo-l5-vJ6" id="BgF-i5-ELb"/>
                 <outlet property="articlesView" destination="fOy-e6-Q0h" id="yUM-Dt-89l"/>
                 <outlet property="descriptionTitleLabel" destination="lEx-FH-gOs" id="02Z-oF-GC8"/>
+                <outlet property="insideRoomTitleLabel" destination="ZP4-VX-HDZ" id="YNl-bZ-8LL"/>
+                <outlet property="roomNameLabel" destination="hqO-r1-Nuz" id="6cw-Ip-KtF"/>
                 <outlet property="stashDescriptionLabel" destination="XXh-Wk-gfD" id="nyK-eX-4b0"/>
                 <outlet property="stashImageView" destination="FSH-w1-E1V" id="tVL-LX-KUl"/>
                 <outlet property="stashNameLabel" destination="L3J-Eq-sI8" id="HiL-zk-YBn"/>
@@ -40,22 +42,39 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="RRz-Cd-tLL">
-                    <rect key="frame" x="16" y="240" width="361" height="196"/>
+                    <rect key="frame" x="16" y="240.00000000000003" width="361" height="260.66666666666674"/>
                     <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="17F-eB-sMG">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="48.666666666666664"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="En la habitación:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZP4-VX-HDZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqO-r1-Nuz">
+                                    <rect key="frame" x="0.0" y="28.333333333333314" width="361" height="20.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3J-Eq-sI8">
-                            <rect key="frame" x="0.0" y="0.0" width="361" height="50"/>
+                            <rect key="frame" x="0.0" y="64.666666666666686" width="361" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jEc-3J-ieE">
-                            <rect key="frame" x="0.0" y="66" width="361" height="50"/>
+                            <rect key="frame" x="0.0" y="130.66666666666669" width="361" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="khd-xe-h1b">
-                            <rect key="frame" x="0.0" y="132" width="361" height="64"/>
+                            <rect key="frame" x="0.0" y="196.66666666666669" width="361" height="64"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEx-FH-gOs">
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="50"/>
